force-app/main/default/objects/Test_Object__c/fields/Test_Field11__c.field-meta.xml
<CustomField>
    <fullName>Test_Field11__c</fullName>
    <description>adfgdafg</description>
    <inlineHelpText>dfagadfg</inlineHelpText>
    <label>Test Field11</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>