force-app/main/default/objects/Test_Object__c/fields/Test_Field12__c.field-meta.xml
<CustomField>
    <fullName>Test_Field12__c</fullName>
    <description>dfgadfg</description>
    <inlineHelpText>dagadf</inlineHelpText>
    <label>Test Field12</label>
    <type>Phone</type>
</CustomField>