force-app/main/default/objects/Test_Object__c/fields/Test_Field13__c.field-meta.xml
<CustomField>
    <fullName>Test_Field13__c</fullName>
    <description>adgadf</description>
    <inlineHelpText>adfga</inlineHelpText>
    <label>Test Field13</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Line 1</fullName>
            </value>
            <value>
                <fullName>Line 2</fullName>
            </value>
            <value>
                <fullName>Line 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>