force-app/main/default/objects/Test_Object__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>adfgd</description>
    <inlineHelpText>agdg</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Test_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>